# FLRubato

./: .gitignore  .pre-commit-config.yaml  README.md  go.mod  go.sum  justfile  pyproject.toml  root.go
Rubato-client/avx2/: main  main.cpp  test_rubato
Rubato-server/: Makefile  README.md
Rubato-server/ckks_fv/: RtF_bench_test.go
ciphertexts/: Ciphertexts.go
configs/: params.go  paths.go  paths_test.go
go-python-ml/calculator/: calculator  calculator.go  run_go_cal.py
go-python-ml/gotch/: main.go  model.py
go-python-ml/gotorch/: cifar.go  cifar.py  cifar10_model.pt  inference.go  simple_model.pt  train.py
go-python-ml/json/: inference.go  train.py
go-python-ml/onnx/: inference.go  model.onnx  test_input.npy  test_output.npy  train.py
go-python-ml/tf/: example.py
keys/: keys.go
src/: consts.go  main.go
src/RtF/: RtF_bench_test.go  algorithms.go  bootstrap.go  bootstrap_params.go  bootstrapper.go  chebyshev_interpolation.go  ciphertext.go  ckks_decryptor.go  ckks_encoder.go  ckks_encryptor.go  ckks_evaluator.go  fv_hera.go  fv_rubato.go  halfboot.go  halfboot_params.go  halfbootstrapper.go  keygen.go  keys.go  linear_transform.go  mfv_decryptor.go  mfv_encoder.go  mfv_encryptor.go  mfv_evaluator.go  mfv_noise_estimator.go  mfv_stc.go  operand.go  params.go  plain_hera.go  plain_rubato.go  plaintext.go  polynomial_evaluation.go  precision.go  rtf_params.go  utils.go
src/fl_aggregator/: README.md  utils.py
utils/: int.go  model_weights.go  printers.go  serialization.go
weights/: mnistavgDecryptedFC1.json  mnistavgDecryptedFC2.json
(+71 files in other folders)
