[project]
name = "flhhe"
version = "0.1.0"
description = "Federated Learning with Hybrid Homomorphic Encryption"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.3.4",
    "numpy>=2.2.1",
    "torch==2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "loguru>=0.7.3",
]

[tool.setuptools]
package-dir = {"" = "src"}