[project]
name = "flhhe"
version = "0.1.0"
description = "Federated Learning with Hybrid Homomorphic Encryption"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab==4.4.2",
    "numpy>=2.2.6",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "tqdm>=4.67.1",
    "loguru>=0.7.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/flhhe"]